[tool.poetry]
name = "st-app"
version = "0.1.0"
description = ""
authors = ["Pham Quang Nghia <quangnghia.ns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
langchain = "^0.3.9"
langchain-community = "^0.3.9"
langchain-google-community = "^2.0.3"
langchain-openai = "^0.2.10"
langgraph = "^0.2.53"
wolframalpha = "^5.1.3"
ruff = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
